--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,10 @@
       </div>
     </div>
 
+    <div id="mainContent">
+      <h1>main content</h1>
+    </div>
+
     <div id="bottomBar">
       <div id="bottomBarGrid">
         <div id="homeButton">
