--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,13 @@
     </div>
 
     <div id="mainContent">
-      <h1>main content</h1>
+      <div id="feedContainer">
+        <div class="feedItem"></div>
+        <div class="feedItem"></div>
+        <div class="feedItem"></div>
+        <div class="feedItem"></div>
+      </div>
+      <h1> scroll test</h1>
     </div>
 
     <div id="bottomBar">
