change file strc

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
     <div id="mainContent">
       <div id="feedContainer">
-        <div class="feedItem"></div>
+        <div class="feedItem">
+          <div class="itemIcon"></div>
+        </div>
         <div class="feedItem"></div>
         <div class="feedItem"></div>
         <div class="feedItem"></div>
