--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   </head>
@@ -40,14 +40,26 @@
 
     <div id="mainContent">
       <div id="feedContainer">
+
         <div class="feedItem">
-          <div class="itemIcon"></div>
+            <div class="itemIcon"></div>
+            <div class="itemType">
+              <h2>Requesting</h2>
+            </div>
+            <div class="itemPostInfo">
+              <div class="itemDate">
+                <h4>1hr</h4>
+              </div>
+              <div class="itemUser">
+                <h4>Dylan T.</h4>
+              </div>
+            </div>
+            <div class="itemTitle">
+              <h2>Crayons and Markers</h2>
+            </div>
         </div>
-        <div class="feedItem"></div>
-        <div class="feedItem"></div>
-        <div class="feedItem"></div>
+
       </div>
-      <h1> scroll test</h1>
     </div>
 
     <div id="bottomBar">
