--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -51,14 +52,87 @@
                 <h4>1hr</h4>
               </div>
               <div class="itemUser">
-                <h4>Dylan T.</h4>
+                <h4><i class="fas fa-user"></i>  Dylan T.</h4>
               </div>
             </div>
             <div class="itemTitle">
-              <h2>Crayons and Markers</h2>
+              <h2>Crayons & Markers</h2>
+            </div>
+            <div class="itemDropArrow">
+              <i class="fas fa-chevron-down"></i>
             </div>
         </div>
 
+        <div class="feedItem">
+            <div class="itemIcon"></div>
+            <div class="itemType">
+              <h2>Providing</h2>
+            </div>
+            <div class="itemPostInfo">
+              <div class="itemDate">
+                <h4>1hr</h4>
+              </div>
+              <div class="itemUser">
+                <h4><i class="fas fa-user"></i>  Kyle L.</h4>
+              </div>
+            </div>
+            <div class="itemTitle">
+              <h2>Science Lesson Plan</h2>
+            </div>
+            <div class="itemDropArrow">
+              <i class="fas fa-chevron-down"></i>
+            </div>
+        </div>
+
+        <div class="feedItem">
+            <div class="itemIcon"></div>
+            <div class="itemType">
+              <h2>Requesting</h2>
+            </div>
+            <div class="itemPostInfo">
+              <div class="itemDate">
+                <h4>1hr</h4>
+              </div>
+              <div class="itemUser">
+                <h4><i class="fas fa-user"></i>  Lorem I.</h4>
+              </div>
+            </div>
+            <div class="itemTitle">
+              <h2>Science Lesson Plan</h2>
+            </div>
+            <div class="itemDropArrow">
+              <i class="fas fa-chevron-down"></i>
+            </div>
+        </div>
+
+        <div class="feedItem">
+            <div class="itemIcon"></div>
+            <div class="itemType">
+              <h2>Requesting</h2>
+            </div>
+            <div class="itemPostInfo">
+              <div class="itemDate">
+                <h4>1hr</h4>
+              </div>
+              <div class="itemUser">
+                <h4><i class="fas fa-user"></i>  Angela G
+
+                  .</h4>
+              </div>
+            </div>
+            <div class="itemTitle">
+              <h2>Crayons & Markers</h2>
+            </div>
+            <div class="itemDropArrow">
+              <i class="fas fa-chevron-down"></i>
+            </div>
+        </div>
+
+
+
+      </div>
+      <div id="forumContainer">
+        test
       </div>
     </div>
 
