--- a/public/html/index.html
+++ b/public/html/index.html
@@ -132,7 +132,78 @@
 
       </div>
       <div id="forumContainer">
-        test
+        <div id="forumGrid">
+          <div class="subForum">
+            <div class="borderLeft"></div>
+            <div class="subForumIcon">
+              <i class="fas fa-comment"></i>
+            </div>
+            <div id="gdButton" class="subForumInfo">
+              <h1>General Discussion</h1>
+              <h2>Discuss anything about teaching</h2>
+            </div>
+          </div>
+          <div id="mathButton" class="subForum">
+            <div class="borderLeft"></div>
+            <div class="subForumIcon">
+              <i class="fas fa-divide"></i>
+            </div>
+            <div class="subForumInfo">
+              <h1>Math</h1>
+              <h2>Discuss anything about teaching Math</h2>
+            </div>
+          </div>
+          <div id="scienceButton" class="subForum">
+            <div class="borderLeft"></div>
+            <div class="subForumIcon">
+              <i class="fas fa-flask"></i>
+            </div>
+            <div class="subForumInfo">
+              <h1>Science</h1>
+              <h2>Discuss anything about teaching Science</h2>
+            </div>
+          </div>
+          <div id="englishButton" class="subForum">
+            <div class="borderLeft"></div>
+            <div class="subForumIcon">
+              <i class="fas fa-book"></i>
+            </div>
+            <div class="subForumInfo">
+              <h1>English Language Arts</h1>
+              <h2>Discuss anything about teaching English</h2>
+            </div>
+          </div>
+          <div id="ssButton" class="subForum">
+            <div class="borderLeft"></div>
+            <div class="subForumIcon">
+              <i class="fas fa-landmark"></i>
+            </div>
+            <div class="subForumInfo">
+              <h1>Social Studies</h1>
+              <h2>Discuss anything about teaching Social Studies</h2>
+            </div>
+          </div>
+          <div id="foreignButton" class="subForum">
+            <div class="borderLeft"></div>
+            <div class="subForumIcon">
+              <i class="fas fa-globe-asia"></i>
+            </div>
+            <div class="subForumInfo">
+              <h1>Foreign Languages</h1>
+              <h2>Discuss anything about teaching Foreign Languages</h2>
+            </div>
+          </div>
+          <div id="offTopicButton" class="subForum">
+            <div class="borderLeft"></div>
+            <div class="subForumIcon">
+              <i class="fas fa-comment-alt"></i>
+            </div>
+            <div class="subForumInfo">
+              <h1>Off-topic</h1>
+              <h2>Discuss anything about anything</h2>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
