added messages to convo

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               </div>
               <div class="notifContent">
                 <p><b>Rebecca Rain</b> messaged you.</p>
-                <span class="time">1m ago</span>
+                <span class="time-ago">1m ago</span>
               </div>
             </div>
             <div class="notificationItem gotoRequest">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="notifContent">
                   <p><b>Rebecca Rain</b> wishes to fulfill your request.</p>
-                  <span class="time">1m ago</span>
+                  <span class="time-ago">1m ago</span>
                 </div>
             </div>
             <div class="notificationItem gotoProvide">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="notifContent">
                   <p><b>Lorem I.</b> would like to request your materials.</p>
-                  <span class="time">1d ago</span>
+                  <span class="time-ago">1d ago</span>
                 </div>
             </div>
             <div class="notificationItem confirmation">
@@ -72,7 +72,7 @@
                 </div>
                 <div class="notifContent">
                   <p><b>Lorem I.</b> would like to request your materials.</p>
-                  <span class="time">1d ago</span>
+                  <span class="time-ago">1d ago</span>
                 </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
               </div>
               <div class="notifContent">
                 <p><b>Rebecca Rain:</b> Hi! I have some crayons that you might be interested in. A few colors might be missing though.</p>
-                <span class="time">1m ago</span>
+                <span class="time-ago">1m ago</span>
               </div>
             </div>
             <div class="messagePreviewItem">
@@ -92,7 +92,7 @@
                 </div>
                 <div class="msgContent">
                   <p><b>Lorem I.:</b> Thank you so much! See you then.</p>
-                  <span class="time">1m ago</span>
+                  <span class="time-ago">1m ago</span>
                 </div>
             </div>
             <div class="messagePreviewItem"></div>
@@ -129,12 +129,32 @@
       <div id="conversation" id="user-id-3-msg-user-id-2">
         <div id="messageContainer">
           <div class="messageItem non-native-user">
-            <p>This is a message.</p>
-            <span class="time">9:05pm</span>
+            <p>Hi! Would you mind emailing me a copy of your science lesson plan?</p>
+            <span class="date-and-time">10/30/18 9:05pm</span>
           </div>
           <div class="messageItem native-user">
-            <p>This is another message.</p>
-            <span class="time">9:07pm</span>
+            <p>Not at all. I'll email it to you as soon as possible.</p>
+            <span class="date-and-time">10/30/18 9:07pm</span>
+          </div>
+          <div class="messageItem non-native-user">
+            <p>That would be great, thank you.</p>
+            <span class="date-and-time">10/30/18 9:07pm</span>
+          </div>
+          <div class="messageItem native-user">
+            <p>I also have some prepped materials if you're interested? I can probably meet up during the weekend if you'd like.</p>
+            <span class="date-and-time">10/30/18 9:07pm</span>
+          </div>
+          <div class="messageItem non-native-user">
+            <p>Sure. Is Pearl City Starbucks at 11pm Saturday ok?</p>
+            <span class="date-and-time">10/30/18 9:07pm</span>
+          </div>
+          <div class="messageItem native-user">
+            <p>I can make it. See you then.</p>
+            <span class="date-and-time">10/30/18 9:07pm</span>
+          </div>
+          <div class="messageItem non-native-user">
+            <p>Thank you so much! See you then.</p>
+            <span class="date-and-time">10/30/18 9:07pm</span>
           </div>
         </div>
       </div>
