--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,6 +15,7 @@
       <div id="topBarGrid">
         <div id="userIcon">
           <div id="userIconCircle"></div>
+          <i  id="backArrow" class="fas fa-arrow-left"></i>
         </div>
         <div id="appName">
           <h1>App Name</h1>
@@ -26,18 +27,20 @@
           <i class="fas fa-plus"></i>
         </div>
       </div>
-    </div>
 
-    <div id="resourceForumBar">
-      <div id="rfBarGrid">
-        <div id="resourcesButton">
-          <h1>Resources</h1>
-        </div>
-        <div id="forumButton">
-          <h1>Forum</h1>
+      <div id="resourceForumBar">
+        <div id="rfBarGrid">
+          <div id="resourcesButton">
+            <h1>Resources</h1>
+          </div>
+          <div id="forumButton">
+            <h1>Forum</h1>
+          </div>
         </div>
       </div>
     </div>
+
+
 
     <div id="mainContent">
       <div id="feedContainer">
@@ -133,12 +136,12 @@
       </div>
       <div id="forumContainer">
         <div id="forumGrid">
-          <div class="subForum">
+          <div id="gdButton" class="subForum">
             <div class="borderLeft"></div>
             <div class="subForumIcon">
               <i class="fas fa-comment"></i>
             </div>
-            <div id="gdButton" class="subForumInfo">
+            <div class="subForumInfo">
               <h1>General Discussion</h1>
               <h2>Discuss anything about teaching</h2>
             </div>
