added notes to js

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
     </div>
   </div>
 
-  <div id="convoContainer">
+  <div id="convoContainer" class="user-id-4-convo-user-id-2">
     <div id="userBar" class="user-id-2">
       <div class="backButton" onclick="activateMsgTab()">
         <i class="fas fa-angle-left"></i>
