--- a/public/html/index.html
+++ b/public/html/index.html
@@ -224,6 +224,7 @@
       </div>
     </div>
 
+  <script type="text/javascript" src="../js/items.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
   </body>
 </html>
