dynmically creating feed

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -45,7 +45,7 @@
     <div id="mainContent">
       <div id="feedContainer">
 
-        <div class="feedItem">
+        <div class="feedItem request">
             <div class="itemIcon"></div>
             <div class="itemType">
               <h2>Requesting</h2>
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <div class="feedItem">
+        <div class="feedItem provide">
             <div class="itemIcon"></div>
             <div class="itemType">
               <h2>Providing</h2>
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <div class="feedItem">
+        <div class="feedItem request">
             <div class="itemIcon"></div>
             <div class="itemType">
               <h2>Requesting</h2>
@@ -108,7 +108,7 @@
             </div>
         </div>
 
-        <div class="feedItem">
+        <div class="feedItem request">
             <div class="itemIcon"></div>
             <div class="itemType">
               <h2>Requesting</h2>
