--- a/public/html/index.html
+++ b/public/html/index.html
@@ -45,6 +45,9 @@
     <div id="mainContent">
       <div id="feedContainer">
       </div>
+      <div id="individualFeedItem">
+        
+      </div>
       <div id="forumContainer">
         <div id="forumGrid">
           <div id="gdButton" class="subForum">
