started on forum form

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -178,7 +178,12 @@
 
                 <div class="formItemTitle formGridItem">
                   <label for="formTitleInput">What you're requesting/providing</label>
-                  <input id="formTitleInput" type="text">
+                  <select id="formTitleInput">
+                    <option value="">op1</option>
+                    <option value="">op2</option>
+                    <option value="">op3</option>
+                    <option value="">op4</option>
+                  </select>
                 </div>
 
                 <div class="formItemDescription formGridItem">
@@ -215,6 +220,15 @@
       <div class="forumScroll">
       <div class="formContainer">
           <form class="formGrid">
+            <div class="formItemForum formGridItem">
+              <label for="formForumInput">What forum you're posting in</label>
+              <select id="formForumInput">
+                <option value="">op1</option>
+                <option value="">op2</option>
+                <option value="">op3</option>
+                <option value="">op4</option>
+              </select>
+            </div>
           </form>
       </div>
     </div>
