added search bar and commented search funtion

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -59,7 +59,7 @@
               </div>
             </div>
             <div class="itemTitle">
-              <h2>Crayons & Markers</h2>
+              <h2 class="title">Crayons & Markers</h2>
             </div>
             <div class="itemDropArrow">
               <i class="fas fa-chevron-down"></i>
@@ -80,7 +80,7 @@
               </div>
             </div>
             <div class="itemTitle">
-              <h2>Science Lesson Plan</h2>
+              <h2 class="title">Science Lesson Plan</h2>
             </div>
             <div class="itemDropArrow">
               <i class="fas fa-chevron-down"></i>
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="itemTitle">
-              <h2>Science Lesson Plan</h2>
+              <h2 class="title">Science Lesson Plan</h2>
             </div>
             <div class="itemDropArrow">
               <i class="fas fa-chevron-down"></i>
@@ -124,7 +124,7 @@
               </div>
             </div>
             <div class="itemTitle">
-              <h2>Crayons & Markers</h2>
+              <h2 class="title">Crayons & Markers</h2>
             </div>
             <div class="itemDropArrow">
               <i class="fas fa-chevron-down"></i>
@@ -216,7 +216,9 @@
           <i class="fas fa-home"></i>
         </div>
         <div id="searchButton">
-          <i class="fas fa-search"></i>
+          <form id="searchBar">
+            <input type="text" placeholder="Search..." />
+          </form>
         </div>
         <div id="alertsButton">
           <i class="far fa-bell"></i>
