working on search function

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -118,9 +118,7 @@
                 <h4>1hr</h4>
               </div>
               <div class="itemUser">
-                <h4><i class="fas fa-user"></i>  Angela G
-
-                  .</h4>
+                <h4><i class="fas fa-user"></i>  Angela G.</h4>
               </div>
             </div>
             <div class="itemTitle">
