--- a/public/html/index.html
+++ b/public/html/index.html
@@ -49,7 +49,7 @@
             <div id="feedContainer">
             </div>
             <div id="individualFeedItem">
-
+              <div class="repliesText"><i class="fas fa-comment-dots"></i> REPLIES</div>
             </div>
             <div id="forumContainer">
                 <div id="forumGrid">
