--- a/public/html/inbox.html
+++ b/public/html/inbox.html
@@ -5,12 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
-  <link rel="stylesheet" type="text/css" href="inbox.css">
+  <link rel="stylesheet" type="text/css" href="../css/inbox.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./inbox.js"></script>
 </head>
 
 <body>
@@ -23,7 +21,6 @@
         <div id="appName">
           <h1>App Name</h1>
         </div>
-        <div class="empty"></div>
         <div id="newMsgButton">
           <i class="fas fa-plus"></i>
         </div>
@@ -45,7 +42,7 @@
       <div id="notificationContainer">
         <div class="notificationItem gotoMsg">
           <div class="user-icon user-id-1">
-            <img src="./avatars/013-woman-3.png">
+            <img src="../images/avatars/013-woman-3.png">
           </div>
           <div class="notifContent">
             <p><b>Rebecca Rain</b> messaged you.</p>
@@ -54,7 +51,7 @@
         </div>
         <div class="notificationItem gotoRequest">
           <div class="user-icon user-id-1">
-            <img src="./avatars/013-woman-3.png">
+            <img src="../images/avatars/013-woman-3.png">
           </div>
           <div class="notifContent">
             <p><b>Rebecca Rain</b> wishes to fulfill your request.</p>
@@ -63,7 +60,7 @@
         </div>
         <div class="notificationItem gotoProvide">
           <div class="user-icon user-id-2">
-            <img src="./avatars/002-woman-14.png">
+            <img src="../images/avatars/002-woman-14.png">
           </div>
           <div class="notifContent">
             <p><b>Lorem I.</b> would like to request your materials.</p>
@@ -72,7 +69,7 @@
         </div>
         <div class="notificationItem confirmation">
           <div class="user-icon user-id-3">
-            <img src="./avatars/031-boy-2.png">
+            <img src="../images/avatars/031-boy-2.png">
           </div>
           <div class="notifContent">
             <p><b>Laurence Doi</b> would like to request your materials.</p>
@@ -81,27 +78,25 @@
         </div>
       </div>
       <div id="messagePreviewContainer">
-        <div class="messagePreviewItem">
-          <div class="user-icon user-id-1">
-            <img src="./avatars/013-woman-3.png">
+        <div class="messagePreviewItem user-id-1">
+          <div class="user-icon">
+            <img src="../images/avatars/013-woman-3.png">
           </div>
-          <div class="notifContent">
-            <p><b>Rebecca Rain:</b> Hi! I have some crayons that you might be interested in. A few colors might be
+          <div class="msgContent">
+            <p><b class="user-name">Rebecca Rain</b>: Hi! I have some crayons that you might be interested in. A few colors might be
               missing though.</p>
             <span class="time-ago">1m ago</span>
           </div>
         </div>
-        <div class="messagePreviewItem convoIdentifier">
-          <div class="user-icon user-id-3">
-            <img src="./avatars/002-woman-14.png">
+        <div class="messagePreviewItem user-id-2">
+          <div class="user-icon">
+            <img src="../images/avatars/002-woman-14.png">
           </div>
           <div class="msgContent">
-            <p><b>Lorem I.:</b> Thank you so much! See you then.</p>
+            <p><b class="user-name">Lorem I.</b>: Thank you so much! See you then.</p>
             <span class="time-ago">1m ago</span>
           </div>
         </div>
-        <div class="messagePreviewItem"></div>
-        <div class="messagePreviewItem"></div>
       </div>
 
     </div>
@@ -121,14 +116,14 @@
     </div>
   </div>
 
-  <div id="convoContainer" class="convoIdentifier">
+  <div id="convoContainer">
     <div id="userBar" class="user-id-2">
       <div class="msgBackButton">
         <i class="fas fa-angle-left"></i>
       </div>
-      <div class="user-name" id="user-id-2">Lorem I.</div>
-      <div class="user-icon user-id-2">
-        <img src="./avatars/002-woman-14.png">
+      <div class="user-name user-id-2">Lorem I.</div>
+      <div class="user-icon">
+        <img src="../images/avatars/002-woman-14.png">
       </div>
     </div>
     <div id="conversation" class="user-id-4-msg-user-id-2">
@@ -166,47 +161,52 @@
     </div>
     <div id="sendContainer">
       <input type="text" id="msgInput" placeholder="Send a message">
-      <i id="sendButton" class="fas fa-paper-plane"></i>
+      <div id="sendButton">
+        <i class="fas fa-paper-plane"></i>
+      </div>
     </div>
   </div>
 
   <div id="newMsgContainer">
     <div id="searchFriendsBar">
-        <div class="msgBackButton">
-            <i class="fas fa-angle-left"></i>
-          </div>
+      <div class="msgBackButton">
+        <i class="fas fa-angle-left"></i>
+      </div>
       <input id="friendSearchInput" onkeyup="searchFriends()" type="text" placeholder="Find a teacher by name">
       <div id="searchFriendButton">
         <i class="fas fa-search"></i>
       </div>
     </div>
     <div class="friendList user-id-4-friend-list">
-      <div class="friendItem user-id-">
+      <div class="friendItem user-id-2">
         <div class="user-icon">
-          <img src="./avatars/002-woman-14.png">
+          <img src="../images/avatars/002-woman-14.png">
         </div>
-        <div class="friendName user-id-X-name">NAME</div>
+        <div class="friendName user-name">Lorem I.</div>
       </div>
-      <div class="friendItem user-id-">
+      <div class="friendItem user-id-5">
         <div class="user-icon">
-          <img src="">
+          <img src="../images/avatars/015-man-11.png">
         </div>
-        <div class="friendName user-id-X-name">NAME</div>
+        <div class="friendName user-name">Will Smith</div>
       </div>
-      <div class="friendItem user-id-">
+      <div class="friendItem user-id-6">
         <div class="user-icon">
-          <img src="">
+          <img src="../images/avatars/004-woman-12.png">
         </div>
-        <div class="friendName user-id-X-name"></div>
+        <div class="friendName user-name">Laura Wilber</div>
       </div>
-      <div class="friendItem user-id-">
+      <div class="friendItem user-id-7">
         <div class="user-icon">
-          <img src="">
+          <img src="../images/avatars/012-woman-4.png">
         </div>
-        <div class="friendName user-id-X-name"></div>
+        <div class="friendName user-name">Karen Green</div>
       </div>
     </div>
   </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="../js/msgData.js"></script>
+<script type="text/javascript" src="../js/inbox.js"></script>
 
 </html>
