--- a/public/html/index.html
+++ b/public/html/index.html
@@ -163,15 +163,13 @@
                 <div class="formItemType formGridItem">
                     <label for="radioContainer">Type of Post</label>
                     <div id="radioGridContainer">
-                      <label id="formRequest" class="radioContainer">
+                      <label id="formRequest" class="radioContainer" onclick="selectRequest()">
                         <h1>Requesting</h1>
-                        <input type="radio" name="radio" value="request">
-                        <!-- <span class="checkmark"></span> -->
+                        <input id="radioRequest" type="radio" name="radio" value="requesting">
                       </label>
-                      <label id="formProvide" class="radioContainer">
+                      <label id="formProvide" class="radioContainer" onclick="selectProvide()">
                         <h1>Providing</h1>
-                        <input type="radio" name="radio" value="request">
-                        <!-- <span class="checkmark"></span> -->
+                        <input id="radioProvide" type="radio" name="radio" value="providing">
                     </label>
                     </div>
                 </div>
@@ -196,10 +194,10 @@
                   <div class="formItemImageContainer">
                     <input id="uploadImgBtn" type="file" accept="image/*" onchange="loadFile(event)">
                     <i class="fas fa-file-image"></i>
-                    <img id="displayImg">
+                    <img id="displayImg" src = "">
                   </div>
                 </div>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" onclick="postRequest()">
             </form>
         </div>
       </div>
