styling comment page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -139,6 +139,14 @@
                     <i class="far fa-bell"></i>
                 </div>
             </div>
+            <div id="replyButtonContainer" >
+              <div class="addCommentContainer">
+                <h1>Add a comment...</h1>
+              </div>
+              <div class="postContainer">
+                <i class="fas fa-arrow-up"></i>
+              </div>
+            </div>
         </div>
     </div>
 
