--- a/public/html/index.html
+++ b/public/html/index.html
@@ -156,7 +156,9 @@
         <div class="topBar">
             <div class="topBarGrid">
                 <div class="userIcon">
-                    <div class="userIconCircle"></div>
+                    <div class="userIconCircle">
+                        <i class="fas fa-user-graduate"></i>
+                    </div>
                     <i class="backArrow" class="fas fa-arrow-left"></i>
                 </div>
                 <div class="postFeedTitle">
@@ -216,7 +218,9 @@
       <div class="topBar">
           <div class="topBarGrid">
               <div class="userIcon">
-                  <div class="userIconCircle"></div>
+                  <div class="userIconCircle">
+                      <i class="fas fa-user-graduate"></i>
+                  </div>
                   <i class="backArrow" class="fas fa-arrow-left"></i>
               </div>
               <div class="postFeedTitle">
