--- a/public/html/index.html
+++ b/public/html/index.html
@@ -176,11 +176,11 @@
                     <label for="radioContainer">Type of Post</label>
                     <div id="radioGridContainer">
                       <label id="formRequest" class="radioContainer" onclick="selectRequest()">
-                        <h1>Requesting</h1>
+                        <h1 id="h1Request">Requesting</h1>
                         <input id="radioRequest" type="radio" name="radio" value="requesting">
                       </label>
                       <label id="formProvide" class="radioContainer" onclick="selectProvide()">
-                        <h1>Providing</h1>
+                        <h1 id="h1Provide">Providing</h1>
                         <input id="radioProvide" type="radio" name="radio" value="providing">
                     </label>
                     </div>
